--- a/src/app/grade-entry-agent/pages/dashboard/dashboard.component.html
+++ b/src/app/grade-entry-agent/pages/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
+<div class="card w-100">
+  <div class="card-body p-4">
+    <h5 class="card-title fw-semibold mb-4">Classement des étudiants</h5>
+    <button class="btn btn-primary mb-0 fw-normal" (click)="getClassmentAsCSV()">
+      <i-tabler name="arrows-sort" class="icon-16"></i-tabler>  Générer le classement
+    </button>
+  </div>
+</div>
+<br>
 <div class="row">
 
   <div class="col-lg-4">
